# reference_database_server

./: .gitignore  QWEN.md  README.md  pyproject.toml  requirements.txt  requirements_dev.txt
docsearch/: __init__.py  config.py
docsearch/cli/: main.py  utils.py
docsearch/cli/commands/: __init__.py  bibtex.py  document.py  get.py  index.py  ls.py  meta.py  papers.py  reference.py  search.py  textbooks.py
docsearch/core/: handlers.py  indexer.py  models.py  repository.py
docsearch/extractors/: __init__.py  base.py  docx.py  markdown.py  pdf.py
docsearch/server/: app.py  dependencies.py  schemas.py
docsearch/server/routes/: documents.py  fs.py  index.py  papers.py  search.py  textbooks.py
migrations/: 001_initial.sql  003_add_textbook_chapters.sql
tests/: conftest.py  test_cli_path_resolution.py  test_extractors.py  test_handlers.py  test_move.py  test_papers_cli_path_resolution.py  test_papers_cli_validation.py  test_repository.py  test_server.py
tests/fixtures/: __init__.py  documents.py
