[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "docsearch"
version = "0.1.0"
description = "Document metadata index and search engine with CLI and REST API"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.6",
    "pymupdf>=1.23",
    "python-docx>=1.1",
    "pyyaml>=6.0",
    "pydantic>=2.5",
    "pdf2bib>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "httpx>=0.26",
    "mypy>=1.8",
]

[project.scripts]
docsearch = "docsearch.cli.main:cli"

[project.gui-scripts]
docsearch-server = "docsearch.server.app:main"

[tool.setuptools.packages.find]
include = ["docsearch*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
ignore_missing_imports = true
